# knapsen

./: CMakeLists.txt  ChangeLog  README
cmake/: config-knapsen.h.in
pics/: CMakeLists.txt
po/: CMakeLists.txt  de.po  hu.po
src/: CMakeLists.txt  enums.h  gamesettingswidget.ui  knapsen.desktop  knapsen.kcfg  knapsenui.rc  main.cpp  main.qml  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  playersettingswidget.ui  settings.kcfgc  waitingforopponent.cpp
src/dialogs/: endgamedialog.cpp  endgamedialog.h  endgamewidget.ui  endrounddialog.cpp  endrounddialog.h  endroundwidget.ui  newgamedialog.cpp  newgamedialog.h  newgamewidget.ui  newgamewidget_client.ui  newgamewidget_local.ui  newgamewidget_server.ui  waitforclientdialog.cpp  waitforclientdialog.h  waitforclientwidget.ui  waitforserverdialog.cpp  waitforserverdialog.h  waitforserverwidget.ui  waitingforopponent.cpp  waitingforopponent.h  waitingwidget.ui
src/engine/: bot.cpp  bot.h  card.cpp  card.h  centralcards.cpp  centralcards.h  client.cpp  client.h  deck.cpp  deck.h  gamesequence.cpp  gamesequence.h  player.cpp  player.h  server.cpp  server.h  trump.cpp  trump.h  trumpcard.cpp  trumpcard.h
src/table/: Button.qml  Card.qml  CardsGroup.qml  Name.qml  ScoreTable.qml  Singleshot.qml  animation.cpp  animation.h  array.cpp  array.h  cards.cpp  cards.h  cardsgroup.cpp  cardsgroup.h  centralwidget.cpp  centralwidget.h  globals.js  hand.cpp  hand.h  logic.js  main.qml  mysvgitem.cpp  mysvgitem.h  mytextitem.cpp  mytextitem.h  scoretable.cpp  scoretable.h  svgcard.cpp  svgcard.h  svgimage.cpp  svgimage.h  text.cpp  text.h
src/table/qml/: Button.qml  CardsGroup.qml  Name.qml  ScoreTable.qml  Singleshot.qml  globals.js  main.qml
test/: CMakeLists.txt
test/engine/: CMakeLists.txt  cardtest.cpp  cardtest.h
vagrant/arch/: Vagrantfile  bootstrap.sh
